# sdtm-spec-forge

./: .gitignore  LICENSE  README.md  README_CN.md  config.toml
SDTM_Master/: SDTM Terminology.xlsx  SDTMIG_v3.4.xlsx
docs/requirements/: 00_project_overview.md  01_questions_round1.md  02_questions_round2.md  04_final_specification.md  DISCUSSION_LOG.md
pipeline/: .gitignore  README.md  VC_BC01_constant.py  VC_BC02_baseUtils.py  VC_BC03_fetchConfig.py  VC_BC04_operateType.py  VC_BC06_operateTypeFunctions.py  VC_OP01_cleaning.py  VC_OP02_insertCodeList.py  VC_OP03_insertMetadata.py  VC_OP04_format.py  VC_OP05_mapping.py  VC_PS01_makeInputCSV.py  VC_PS02_csv2json.py  project.local.json.example  requirements.txt
pipeline/experiment/combine_test/: VC_OP06_combine.py  run_combine_process_tests.py
pipeline/studySpecific/example_study/: VC_BC05_studyFunctions.py
spec-creator/: Cargo.toml  README.md
spec-creator/src/: lib.rs  main.rs
spec-creator/src/analyzer/: codelist_matcher.rs  mod.rs  stats.rs  tree_builder.rs
spec-creator/src/model/: domain.rs  mod.rs  tree.rs  variable.rs
spec-creator/src/reader/: csv_reader.rs  mapping_reader.rs  mod.rs  sdtmig_reader.rs  terminology_reader.rs
spec-creator/src/writer/: change_history.rs  codelist.rs  cover.rs  data_trace.rs  dataset_overview.rs  excel_writer.rs  mod.rs  notes.rs  overview.rs  styles.rs  tree_table.rs  tree_view.rs  variable_list.rs
