[package]
name = "sdtm-spec-creator"
version = "0.1.0"
edition = "2021"
description = "SDTM Dataset Specification Excel Generator"

[dependencies]
calamine = "0.26"
csv = "1.3"
rust_xlsxwriter = "0.82"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
indexmap = "2"
toml = "0.8"
